--- a/fragments/fragments-insuranceclaim/res/values/strings.xml
+++ b/fragments/fragments-insuranceclaim/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="save">Save</string>
     <string name="waiver_saved">The insurance form has been saved to %s.</string>
     <string name="about">About</string>
-    <string name="about_content">An simple example of the Fragments API!</string>
+    <string name="about_content">A simple example of Fragments</string>
     <string name="reset">Reset</string>
 
 </resources>
