Fix drawing artifacts

--- a/graphs/piechart/res/values/strings.xml
+++ b/graphs/piechart/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello piechart!</string>
-    <string name="app_name">piechart</string>
+    <string name="app_name">Piechart</string>
 </resources>
